selectee.css
/*------------------------------------------------------------------
SELECTEE INPUT
-------------------------------------------------------------------*/
.selectee {
    display: flex;
    position: relative;
    box-sizing: border-box;
    width:100%;
}

.selectee.open {
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    flex-direction: column;
    box-sizing: border-box;
    width: 100vw;
    height: 100vh;
    background-color: #f5f5f5;
    z-index: 99;
}

.selectee .selectee-input-label {
    display: none;
}

.selectee.open .selectee-input-label {
    display: flex;
    position: relative;
    box-sizing: border-box;
    align-items: center;
    padding: 15px 15px 0;
    width: 100%;
    font-weight: 600;
    color: #ccc;
}

.selectee .selectee-input-container {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    width:100%;
    height: 35px;
    padding: 6px 15px;
    background-color: #f5f5f5;
    border-radius:20px;
}

.selectee.open .selectee-input-container {
    font-size:180%;
    height: 50px;
    border-radius: 0;
}

.selectee .selectee-input {
    display: block;
    position: relative;
    width: 100%;
    height:100%;
    padding:0;
    font-size: 100%;
    font-weight: 600;
    border:none;
    background-color:transparent;
    appearance:none;
    -webkit-appearance:none;
}

.selectee.open .selectee-arrow {
    display: none;
}

.selectee .selectee-arrow {
    display: block;
    position: relative;
    top: 0;
    width: 0;
    height: 0;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-top: 6px solid #666;
    cursor:pointer;
}

.selectee .selectee-close {
    display: none;
    position: relative;
    width: 32px;
    height: 32px;
    /* margin-left:10px; */
    opacity: 0.3;
}

.selectee.open .selectee-close {
    display:block;
    cursor:pointer;
}

.selectee .selectee-close:hover {
    opacity: 1;
}

.selectee .selectee-close:before,
.selectee .selectee-close:after {
    position: absolute;
    left: 15px;
    content: ' ';
    height: 33px;
    width: 2px;
    background-color: #333;
}

.selectee .selectee-close:before {
    transform: rotate(45deg);
}

.selectee .selectee-close:after {
    transform: rotate(-45deg);
}

/*------------------------------------------------------------------
SELECTEE DROPDOWN
-------------------------------------------------------------------*/
.selectee .selectee-dropdown {
    display: none;
}

.selectee.open .selectee-dropdown {
    display: flex;
    position: relative;
    flex-direction: column;
    justify-content: flex-start;
    box-sizing: border-box;
    width:100%;
    height: calc(100% - 50px);
    font-size:130%;
    background-color: #fff;
    color:#333;
    overflow-y: scroll;
}

.selectee.open .selectee-dropdown .selectee-option-group {
    display: flex;
    position: relative;
    flex-direction: column;
    justify-content: flex-start;
}

.selectee .selectee-dropdown .selectee-option-group .selectee-option-group-label {
    padding:10px 20px;
    background-color:#fff;
    font-size:70%;
    font-weight: 700;
    text-align:left;
    border-bottom:solid 1px #eee;
}

.selectee .selectee-dropdown .selectee-option-group .selectee-option {
    display: flex;
    position: relative;
    box-sizing: border-box;
    align-items: center;
    justify-content: space-between;
    padding:10px 20px;
    font-weight: 400;
    min-height: 32px;
    border-bottom:solid 1px #eee;
}

.selectee .selectee-dropdown .selectee-option-group .selectee-option:active,
.selectee .selectee-dropdown .selectee-option-group .selectee-option.highlight {
    background-color: #00BCD4;
    color: #fff;
}

.selectee .selectee-dropdown .selectee-option-group .selectee-option.active::after {
    display: block;
    position: relative;
    content: '';
    top:-2px;
    width: 6px;
    height: 15px;
    color:inherit;
    border: solid;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
}


/*------------------------------------------------------------------
SELECTEE DESKTOP
-------------------------------------------------------------------*/
@media only screen
    and (min-width: 1200px) {
    .selectee.open {
        position:relative;
        width:100%;
        height: auto;
        padding:0;
    }

    .selectee.open .selectee-input-label {
        display: none;
    }

    .selectee.open .selectee-input-container {
        height:35px;
        font-size:100%;
        border-radius: 10px 10px 0 0;
    }

    .selectee .selectee-input {
        font-weight: 400;
    }

    .selectee.open .selectee-dropdown {
        position: absolute;
        margin-top: 35px;
        height: auto;
        max-height: 240px;
        font-size: 100%;
        box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
    }

    .selectee .selectee-close {
        width: 12px;
        height: 12px;
    }

    .selectee .selectee-close:before {
        left: 6px;
        height: 12px;
    }
    .selectee .selectee-close:after {
        left: 6px;
        height: 12px;
    }

    .selectee .selectee-dropdown .selectee-option-group .selectee-option {
        -o-user-select:none;
        -ms-user-select:none;
        -moz-user-select:none;
        -webkit-user-select:none;
        user-select:none;
        padding:10px 15px;
        cursor:pointer;
    }

    .selectee .selectee-dropdown .selectee-option-group .selectee-option:hover {
        background-color: #eee;
        transition: background-color .2s;
    }

    .selectee .selectee-dropdown .selectee-option-group .selectee-option:active,
    .selectee .selectee-dropdown .selectee-option-group .selectee-option.highlight {
        background-color: #00BCD4;
        color: #fff;
    }

    .selectee .selectee-dropdown .selectee-option-group .selectee-option.active::after {
        height:10px;
    }
}

